force-app/main/default/objects/Offline_Payment__c/Offline_Payment__c.object-meta.xml
<CustomObject>
    <label>Offline Payment</label>
    <nameField>
        <displayFormat>OP-{0000}</displayFormat>
        <label>Offline Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offline Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>