force-app/main/default/objects/Offline_Payment__c/fields/Check_No__c.field-meta.xml
<CustomField>
    <fullName>Check_No__c</fullName>
    <label>Check No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>