force-app/main/default/objects/Offline_Payment__c/validationRules/RefundAmountTransaction.validationRule-meta.xml
<ValidationRule>
    <fullName>RefundAmountTransaction</fullName>
    <active>false</active>
    <errorConditionFormula>IF( ISPICKVAL(Type__c,&quot;Offline Refund&quot;) &amp;&amp;  Amount__c  &gt;=  0, true, false )</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>The amount must be less than 0 for refunds records</errorMessage>
</ValidationRule>